@@ -2,6 +2,8 @@
 Fix
 /////////////////////////
 
+background videos out of sync at non-1 song rates
+
 Hrm..  I had a few things about Stepmania I wanted to suggest, but can't think of all of them now..  Lemme list the ones I can remember:
  
  - In "all songs" don't have it automatically open one of the folders, or at least have it start at the very beginning of the folder
