@@ -9,6 +9,8 @@ CHANGE:  Changed format  NoteSkin tap graphic format.  Existing NoteSkins will
 	need to update the tap graphic.
 NEW FEATURE:  New Edit menus with ability to delete Notes patterns and new 
 	options	for importing existing patterns into a new Notes pattern.
+NEW FEATURE:  Jukebox mode.  Like demonstration, but plays entire songs 
+	and loops.
 
 ----------------------- Version 3.01 ---------------------------
 CHANGE:  Simplified NoteSkin tap graphic format.  Old NoteSkins will need to 
